--- a/examples/hello/Cargo.toml
+++ b/examples/hello/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "lowui"
+name = "hello"
 version = "0.1.0"
 authors = ["Jeremy Sorensen"]
 edition = "2018"
@@ -7,7 +7,4 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-serde = { version = "1.0", features = ["derive"] }
-serde_json = "1.0"
-tungstenite = "0.10.1"
-rocket = "0.4.4"
+lowui = { path = "../.." }
